k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-tutor-backend-service
spec:
  selector:
    app: aws-tutor-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
